--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,11 +12,61 @@
 	</body>
 </html>
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
+<style is:global>
+	html{
+		font-family: Menlo, Monaco, Lucida Console, 'Courier New', Courier;
+		monospace; 
+		background-color: white; 
+		letter-spacing: -0.025rem;
 	}
+	body,
+	figure{
+		margin: 0; 
+		padding: 0; 
+
+	}
+
+a{
+	text-decoration: none;
+}
+
+ul{
+	list-style: none; 
+	margin: 0; 
+	padding: 0; 
+
+}
+
+*, *::before , *::after{
+	box-sizing: border-box; 
+}
+
+h1, h2, h3, h4{
+	margin: 0; 
+	font-family:
+		Menlo ,
+		system-ui, 
+		-apple-system, 
+		BlinkMacSystemFont, 
+		'Segoe UI', 
+		Roboto, 
+		Oxygen, 
+		Ubuntu, 
+		Cantarell, 
+		'Open Sans', 
+		'Helvetica Neue', 
+		sans-serif;
+}
+
+p{
+	color: #666; 
+	font-size: 0.89rem; 
+	line-height: 1.5;
+	margin :0; 
+	text-wrap: pretty;
+}
+
+
 </style>
+	
+
