--- a/src/components/KeyboardManager.astro
+++ b/src/components/KeyboardManager.astro
@@ -2,10 +2,36 @@
 
 </footer>
 
-<script>
+<ninja-keys>
+</ninja-keys>
 
+---
+<script>
+    import "ninja-keys"
+    const ninja = document.querySelector("ninja-keys")
+
+    if(ninja != null){
+        ninja.data = [
+             {
+        id: 'print',
+        title: '🖨️ Print',
+        hotkey: 'ctrl+p',
+        section: 'Actions',
+        handler: () => {
+            window.print()
+        }
+    }
+    ];
+            
+    }
 </script>
 
-<style> 
+<style is:global> 
+    @media print{
+        ninja-keys {
+            display:none !important; 
+        }
 
+    }
 </style> 
+
