--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -11,7 +11,7 @@ import KeyboardManager from '@/components/KeyboardManager.astro'
 import Awards from './sections/Awards.astro';
 ---
 
-<div id="Minimalist Portfolio">
+<div id="Minimalist Portfolio" title ="Portfolio">
 	
 <main>
 	<Hero /> 
