slved images error

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,7 +6,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/ong" href="/src/assets/PortfolioIcon.png" />
+		<link rel="icon" type="image/png" href="/public/PortfolioIcon.png" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Alejandro’s Minimalistic Portfolio</title>
 	</head>
